[package]
name = "rotools"
version = "0.2.2"
edition = "2018"
license = "MIT"
description = "Helpful stuff."
homepage = "https://ronanmccabe.app/"
repository = "https://github.com/ronanyeah/rotools"
keywords = ["ronan"]
categories = ["web-programming"]

[dependencies]
anyhow = "1.0.57"
graphql_client = "0.10.0"
reqwest = { version = "0.11.10", features = ["json"] }
serde = "1.0.137"
serde_json = "1.0.81"
url = "2.2.2"
