[package]
name = "rotools"
version = "0.3.0"
edition = "2018"
license = "MIT"
description = "Helpful stuff."
homepage = "https://ronanmccabe.app/"
repository = "https://github.com/ronanyeah/rotools"
keywords = ["ronan"]
categories = ["web-programming"]

[dependencies]
anyhow = "1.0.68"
csv = "1.1.6"
graphql_client = "0.11.0"
persy = "1.4.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.152"
serde_json = "1.0.91"
url = "2.3.1"

[dev-dependencies]
rand = "0.9.0"
